--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=oauth2-elearning-platform
+
+server.port=8081
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://192.168.8.102:8080/realms/elearning-realm
+
+spring.datasource.url=jdbc:h2:mem:elearningdb
+
+spring.h2.console.enabled=true
